force-app/main/default/objects/docutizexa__SchedulerBatchData__c/docutizexa__SchedulerBatchData__c.object-meta.xml
<CustomObject>
    <label>SchedulerBatchData</label>
    <nameField>
        <label>JobID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SchedulerBatchData</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>