force-app/main/default/objects/docutizexa__SchedulerBatchData__c/fields/docutizexa__RecordId__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__RecordId__c</fullName>
    <label>RecordId</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>