force-app/main/default/objects/docutizexa__SchedulerBatchData__c/fields/docutizexa__ReportId__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__ReportId__c</fullName>
    <label>ReportId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>