force-app/main/default/objects/docutizexa__SchedulerBatchData__c/fields/docutizexa__Template__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__Template__c</fullName>
    <label>Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>